style: update page description

--- a/bskyweb/templates/home.html
+++ b/bskyweb/templates/home.html
@@ -3,18 +3,18 @@
 {% block head_title %}Bluesky{% endblock %}
 
 {% block html_head_extra -%}
-  <meta property="og:title" content="Bluesky" />
-  <meta name="twitter:title" content="Bluesky" />
+  <meta property="og:title" content="Northsky" />
+  <meta name="twitter:title" content="Northsky" />
 
-  <meta name="description" content="Social media as it should be. Find your community among millions of users, unleash your creativity, and have some fun again." />
-  <meta name="og:description" content="Social media as it should be. Find your community among millions of users, unleash your creativity, and have some fun again." />
-  <meta name="twitter:description" content="Social media as it should be. Find your community among millions of users, unleash your creativity, and have some fun again." />
+  <meta name="description" content="We're creating a safer social media experience for 2SLGBTQIA+ people, powered by ATProtocol, and operating as a nonprofit worker-owned cooperative." />
+  <meta name="og:description" content="We're creating a safer social media experience for 2SLGBTQIA+ people, powered by ATProtocol, and operating as a nonprofit worker-owned cooperative." />
+  <meta name="twitter:description" content="We're creating a safer social media experience for 2SLGBTQIA+ people, powered by ATProtocol, and operating as a nonprofit worker-owned cooperative." />
 
-  <meta property="og:url" content="https://bsky.app" />
-  <meta name="twitter:url" content="https://bsky.app" />
+  <meta property="og:url" content="https://northsky.app" />
+  <meta name="twitter:url" content="https://northsky.app" />
 
-  <meta property="og:image" content="https://bsky.app/static/social-card-default-gradient.png" />
-  <meta property="twitter:image" content="https://bsky.app/static/social-card-default-gradient.png"  />
+  <meta property="og:image" content="https://northsky.app/static/social-card-default-gradient.png" />
+  <meta property="twitter:image" content="https://northsky.app/static/social-card-default-gradient.png"  />
 
   <meta name="twitter:site" content="@bluesky" />
   <meta name="twitter:card" content="summary_large_image" />
