--- a/bskyweb/templates/starterpack.html
+++ b/bskyweb/templates/starterpack.html
@@ -9,9 +9,8 @@
   <meta property="og:image" content="{{ imgThumbUrl }}">
   <meta property="twitter:image" content="{{ imgThumbUrl }}">
   {%- else -%}
-  <meta property="og:image" content="https://bsky.app/static/social-card-default-gradient.png" />
-  <meta property="twitter:image" content="https://bsky.app/static/social-card-default-gradient.png"  />
-  {% endif -%}
+  <meta property="og:image" content="https://northsky.app/static/social-card-default-gradient.png" />
+  <meta property="twitter:image" content="https://northsky.app/static/social-card-default-gradient.png"  />
   <meta name="twitter:card" content="summary_large_image" />
   {%- if title %}
   <meta property="og:title" content="{{ title }}" />
