--- a/bskyweb/templates/base.html
+++ b/bskyweb/templates/base.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
   <meta name="referrer" content="origin-when-cross-origin">
 
-  <!-- iOS WEB APP -->
+  <!-- iOS WEB APP  (top and bottom padding issues when enabled)
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Northsky">
+  -->
 
   <!--
     Preconnect to essential domains
