--- a/bskyweb/templates/base.html
+++ b/bskyweb/templates/base.html
@@ -15,7 +15,7 @@
     Preconnect to essential domains
   -->
   <link rel="preconnect" href="https://bsky.social">
-  <title>{%- block head_title -%}Bluesky{%- endblock -%}</title>
+  <title>{%- block head_title -%}Northsky{%- endblock -%}</title>
 
   <!-- Hello Humans! API docs at https://atproto.com -->
 
@@ -123,7 +123,7 @@
   <noscript>
     <h1 lang="en">JavaScript Required</h1>
     <p lang="en">This is a heavily interactive web application, and JavaScript is required. Simple HTML interfaces are possible, but that is not what this is.
-    <p lang="en">Learn more about Bluesky at <a href="https://bsky.social">bsky.social</a> and <a href="https://atproto.com">atproto.com</a>.
+    <p lang="en">Learn more about Northsky at <a href="https://northskysocial.com/">northskysocial.com</a> and <a href="https://atproto.com">atproto.com</a>.
     {% block noscript_extra %}{% endblock %}
   </noscript>
 {% endblock -%}
